--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+logs
+*.log
 node_modules
 npm-debug.log
 yarn-error.log
 vendor
+.DS_Store
+Thumbs.db
+.idea
 .vscode
+*.sublime-project
+*.sublime-workspace
