--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "diacart",
   "version": "0.0.1",
-  "description": "Simple shopping cart",
+  "description": "Simple shopping cart based on localStorage",
   "main": "./lib/diacart.js",
   "keywords": [
     "es6",
@@ -13,9 +13,11 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
     "build": "npm run build:dev && npm run build:prod",
-    "test": "webpack-dev-server --mode development --open --config webpack.test.config.js"
+    "example": "webpack-dev-server --mode development --open --config webpack.example.config.js",
+    "example:build": "webpack --mode production --config webpack.example.config.js",
+    "test": "mocha --require @babel/register"
   },
-  "author": "Salakhutdinov Salavat <salahutdinov.salavat@gmail.com> (https://github.com/Jackardios)",
+  "author": "Salahutdinov Salavat <salahutdinov.salavat@gmail.com> (https://github.com/Jackardios)",
   "repository": {
     "type": "git",
     "url": "https://github.com/Jackardios/diacart.git"
@@ -27,8 +29,13 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
+    "@babel/register": "^7.0.0",
+    "art-template": "^4.13.1",
+    "art-template-loader": "^1.4.3",
     "babel-loader": "^8.0.4",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
     "css-mqpacker": "^7.0.0",
@@ -36,10 +43,12 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
+    "mocha": "^5.2.0",
     "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.3.0",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
@@ -47,5 +56,6 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
-  }
+  },
+  "dependencies": {}
 }
