--- a/package.json
+++ b/package.json
@@ -58,5 +58,7 @@
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "core-js": "^2.5.7"
+  }
 }
