--- a/package.json
+++ b/package.json
@@ -55,10 +55,13 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "core-js": "^2.5.7"
+    "core-js": "^2.5.7",
+    "eventemitter3": "^3.1.0",
+    "lit-html": "^1.0.0",
+    "store": "^2.0.12"
   }
 }
