--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.9",
   "description": "Simple shopping cart based on localStorage",
   "main": "./lib/diacart.js",
+  "unpkg": "./lib/diacart.min.js",
   "keywords": [
     "es6",
     "shopping",
@@ -16,7 +17,9 @@
     "example": "webpack-dev-server --mode development --open --config webpack.example.config.js",
     "example:build": "webpack --mode production --config webpack.example.config.js",
     "test": "mocha --require @babel/register",
-    "patch": "npm run build && git add . && git commit -m 'update lib build' && npm version patch && npm publish && git push -u origin master && git push -u origin master --tags"
+    "patch": "npm run build && git add . && git commit -m 'update lib build' && npm version patch && npm publish && git push -u origin master && git push -u origin master --tags",
+    "minor": "npm run build && git add . && git commit -m 'update lib build' && npm version minor && npm publish && git push -u origin master && git push -u origin master --tags",
+    "major": "npm run build && git add . && git commit -m 'update lib build' && npm version major && npm publish && git push -u origin master && git push -u origin master --tags"
   },
   "author": "Salahutdinov Salavat <salahutdinov.salavat@gmail.com> (https://github.com/Jackardios)",
   "repository": {
@@ -29,37 +32,39 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/register": "^7.0.0",
-    "art-template": "^4.13.1",
+    "art-template": "^4.13.2",
     "art-template-loader": "^1.4.3",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-template-html-minifier": "^2.2.1",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
     "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.7",
+    "cssnano": "^4.1.10",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.4",
+    "mini-css-extract-plugin": "^0.4.5",
     "mocha": "^5.2.0",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.3.0",
+    "postcss-preset-env": "^6.5.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.1.4"
+    "terser-webpack-plugin": "^1.2.3",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "core-js": "^2.5.7",
+    "core-js": "^2.6.5",
     "eventemitter3": "^3.1.0",
     "lit-html": "^1.0.0",
     "store": "^2.0.12"
