--- a/.babelrc
+++ b/.babelrc
@@ -4,20 +4,20 @@
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    ["template-html-minifier", {
-      "modules": {
-        "lit-html": ["html"],
-        "lit-element": [
-          "html",
-          {"name": "css", "encapsulation": "style"}
-        ],
-        "choo/html": [null],
-        "hyperhtml": [{"name": "bind", "type": "factory"}],
-        "hyperhtml-element": [{"name": null, "member": "html"}]
-      },
-      "htmlMinifier": {
-        "collapseWhitespace": true
-      }
-    }]
+    // ["template-html-minifier", {
+    //   "modules": {
+    //     "lit-html": ["html"],
+    //     "lit-element": [
+    //       "html",
+    //       {"name": "css", "encapsulation": "style"}
+    //     ],
+    //     "choo/html": [null],
+    //     "hyperhtml": [{"name": "bind", "type": "factory"}],
+    //     "hyperhtml-element": [{"name": null, "member": "html"}]
+    //   },
+    //   "htmlMinifier": {
+    //     "collapseWhitespace": true
+    //   }
+    // }]
   ]
 }
