--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     "@babel/preset-env"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-class-properties"
     // ["template-html-minifier", {
     //   "modules": {
     //     "lit-html": ["html"],
