--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 logs
 *.log
+build
 example-build
 node_modules
 npm-debug.log
